fix footer align

--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,7 +1,7 @@
 .social {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  padding-top: 30px;
 }
 
 .social__item {
@@ -68,6 +68,7 @@
 @media (min-width: $width-tablet) {
   .social {
     width: 140px;
-    margin-left: 85px;
+    margin-left: 80px;
+    padding-top: 62px;
   }
 }
